--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "simple-blockchain",
   "version": "1.0.0",
   "description": "Simple blockchain implementation for learning purposes",
-  "main": "main.js",
+  "main": "src/main.js",
   "scripts": {
+    "start": "node src/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
