--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/main.js",
   "scripts": {
     "start": "node src/main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/finafisken/simple-blockchain#readme",
   "dependencies": {
     "sha256": "^0.2.0"
+  },
+  "devDependencies": {
+    "mocha": "^4.0.1"
   }
 }
